# ML-lightweight

./: README.md
demo/converter/: indi.py
docs/: NCNN-intro.md  README.md  linux-build.md
docs/performance-optimilize/: README.md
example/UltraFace/src/: UltraFace.hpp  main.cpp
example/squeezenet/: CMakeLists.txt  squeezenet.cpp
experiment/ax6000-cross-compiling/: CMakeLists.txt  README.md  aarch64-linux-musl.toolchain.cmake  main.cpp
experiment/ax6000-runner/: CMakeLists.txt  README.md  runner.cpp
experiment/ddos-ubuntu-first/: CMakeLists.txt  main.cpp
experiment/intro/: README.md  introMain.cpp
experiment/nas-intro/: .gitignore  CMakeLists.txt  main.cpp
experiment/nas-intro/resource/: indi00031_00028.ncnn.param
experiment/nas-intro/tools/: minst.py
experiment/perf-local-intro/: README.md  perf-intro.cpp
experiment/pi4-cross-compiling/: CMakeLists.txt  README.md  main.cpp
experiment/ubuntu-intro/: README.md
resource/mlddos/: mlddos.ncnn.param
toolchains/: aarch64-linux-musl.toolchain.cmake
